--- a/BlazorMatchGame/Pages/Index.razor
+++ b/BlazorMatchGame/Pages/Index.razor
@@ -1,7 +1,50 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<style>
+    .container {
+        width: 400px;
+    }
 
-Welcome to your new app.
+    button {
+        width: 100px;
+        height: 100px;
+        font-size: 50px;
+    }
+</style>
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+<div class="container">
+    <div class="row">
+        @foreach (var animal in shuffledAnimals)
+            {
+                <div class="col-3">
+                    <button type="button" class="btn btn-outline-dark">
+                        <h1>@animal</h1>
+                    </button>
+                </div>
+            }
+
+    </div>
+</div>
+
+@code {
+    List<string> animalEmoji = new List<string>()
+    {
+        "🤯","🤯","😇","😇","🥶","🥶","👹","👹",
+        "😈","😈","🤖","🤖","🎃","🎃","🤡","🤡"
+    };
+
+    List<string> shuffledAnimals = new List<string>();
+
+    protected override void OnInitialized()
+    {
+        setupGame();
+    }
+
+    private void setupGame()
+    {
+        Random random = new Random();
+        shuffledAnimals = animalEmoji
+            .OrderBy(item => random.Next())
+            .ToList();
+    }
+}
